--- a/CountriesPopulation.Api/appsettings.Development.json
+++ b/CountriesPopulation.Api/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=127.0.0.1,1433; Database=CountryPopulation; User=sa; Password =password123;"
   }
 }
 
